test/files/pos/t7551/Test_2.scala
//> using options -Werror
package p

object Foo {
  def bar(t: T): Unit = { }
}
